# plex-renamer

./: CONTRIBUTING.md  LICENSE.txt  README.md  config.example.yaml  pyproject.toml
.github/workflows/: format.yml  lint.yml  python-ci.yml  typecheck.yml
src/plex_renamer/: __init__.py  __main__.py  auto_detect.py  cli.py  config.py  core.py  detection.py  disc_detector.py  guesser.py  metadata_reader.py  patterns.py  sequencer.py  title_normalizer.py  watcher.py  webapp.py
src/plex_renamer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
